feat: add reloadable command support and fix command registration logic